--- a/app/src/main/res/layout/chat_app_bar_layout.xml
+++ b/app/src/main/res/layout/chat_app_bar_layout.xml
@@ -59,14 +59,17 @@
                 android:id="@+id/ib_scan"
                 android:onClick="startScan"
                 android:src="@drawable/scan_qr_white"
+                android:background="null"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"/>
             <ImageButton
                 android:id="@+id/ib_qr"
                 android:onClick="generateQR"
+                android:background="null"
                 android:src="@drawable/qr_button_white"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="10dp"/>
         </LinearLayout>
     </LinearLayout>
 </androidx.appcompat.widget.Toolbar>
