--- a/app/src/main/res/layout/chat_app_bar_layout.xml
+++ b/app/src/main/res/layout/chat_app_bar_layout.xml
@@ -59,18 +59,16 @@
                 android:id="@+id/ib_scan"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-
-                android:background="@drawable/default_message_text_background"
+                android:background="@android:color/transparent"
                 android:onClick="startScan"
                 android:src="@drawable/scan_qr_white" />
 
             <ImageButton
                 android:id="@+id/ib_qr"
                 android:layout_width="wrap_content"
-
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="10dp"
-                android:background="@drawable/default_message_text_background"
+                android:background="@android:color/transparent"
                 android:onClick="generateQR"
                 android:src="@drawable/qr_button_white" />
         </LinearLayout>
