--- a/app/src/main/res/layout/fragment_profile_card_view.xml
+++ b/app/src/main/res/layout/fragment_profile_card_view.xml
@@ -110,6 +110,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Current point is:"
+                                    android:id="@+id/profilePointsInfo"
                                     android:textColor="@color/cardViewProfilePointString"/>
                         </RelativeLayout>
                 </LinearLayout>
